--- a/util/Makefile.Host
+++ b/util/Makefile.Host
@@ -2,3 +2,5 @@
 
 buildInstall : ;
 	@$(MAKE) -f ../makefile.$(HOST_ARCH)
+	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.a ../../../../lib/$(HOST_ARCH)
+	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.so ../../../../lib/$(HOST_ARCH)
