--- a/baselib/Makefile.Host
+++ b/baselib/Makefile.Host
@@ -1,21 +1,17 @@
+# -*- makefile -*-
+
 TOP = ../../../..
 include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 
 ifeq ($(HOST_ARCH),Linux)
-
   USR_CXXFLAGS += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
-
   USR_LIBS_DEFAULT = cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xp Xtst X11 pthread dl
-
 endif
 
 ifeq ($(HOST_ARCH),solaris)
-
   USR_CXXFLAGS += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-
   USR_LIBS_DEFAULT = cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
-
 endif
 
 USR_LDFLAGS += -shared -L../../../../lib/$(HOST_ARCH) -L../../../../bin/$(HOST_ARCH)
@@ -65,3 +61,5 @@ include $(TOP)/config/RULES.Host
 
 G++_NORMAL = $(G++)
 G++_STRICT = $(G++)
+
+
