fixed bad comment char in app_pkg.cc
other additions/changes are for color rule experiments

--- a/baselib/Makefile.Host
+++ b/baselib/Makefile.Host
@@ -57,6 +57,8 @@ SRCS += slider.cc
 SRCS += shell_cmd.cc
 SRCS += reg_libEdmBase.cc
 
+SRCS += expRect.cc
+
 include $(TOP)/config/RULES.Host
 
 G++_NORMAL = $(G++)
