include $(ODIR) in buildInstall dependencies

--- a/pvFactory/makefile
+++ b/pvFactory/makefile
@@ -15,10 +15,11 @@ OBJS   += $(ODIR)/pv_register.o
 
 all: 	$(LIBNAME)
 
-buildInstall: all
+buildInstall: $(ODIR) all
 
 $(LIBNAME): $(OBJS)
 	$(SL_LINK) -o $(LIBNAME) $(OBJS) $(SL_FLAGS)
+	cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/solaris
 
 # Dependencies
 $(ODIR)/pv_factory.o: pv_factory.cc pv_factory.h
