Use color names instead of indices in edl file, renamed the ProcessVariable status callback to conn_state update, more comments in pv_factory.h to explain the two callbacks

--- a/pvFactory/makefile
+++ b/pvFactory/makefile
@@ -22,7 +22,7 @@ buildInstall: $(ODIR) all
 
 $(LIBNAME): $(OBJS)
 	$(SL_LINK) -o $(LIBNAME) $(OBJS) $(SL_FLAGS)
-	cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/solaris
+	-cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/$(HOST_ARCH)
 
 # Dependencies
 $(ODIR)/pv_factory.o: pv_factory.cc pv_factory.h
