added reference to calpad.o

--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -69,6 +69,7 @@ LIBSRCS += group.cc
 LIBSRCS += symbol.cc
 LIBSRCS += dynSymbol.cc
 LIBSRCS += keypad.cc
+LIBSRCS += calpad.cc
 LIBSRCS += undo.cc
 LIBSRCS += rules.cc
 LIBSRCS += color_list.cc
