Added pv_factory related files

--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -75,6 +75,9 @@ LIBSRCS += undo.cc
 LIBSRCS += rules.cc
 LIBSRCS += color_list.cc
 LIBSRCS += msg_dialog.cc
+LIBSRCS += calc_pv_factory.cc
+LIBSRCS += epics_pv_factory.cc
+LIBSRCS += pv_factory.cc
 
 include $(TOP)/config/RULES.Host
 
