moved files to ../lib

--- a/pvFactory/makefile
+++ b/pvFactory/makefile
@@ -6,10 +6,6 @@ inc :;
 
 # Nothing to configure here, try to resolve problems in make.setup
 LIBNAME = $(ODIR)/libPV.so
-OBJS    = $(ODIR)/pv_factory.o
-OBJS   += $(ODIR)/epics_pv_factory.o
-OBJS   += $(ODIR)/postfix.o
-OBJS   += $(ODIR)/calc_pv_factory.o
 OBJS   += $(ODIR)/textupdate.o
 OBJS   += $(ODIR)/SciPlot.o
 OBJS   += $(ODIR)/strip_data.o
@@ -23,14 +19,8 @@ buildInstall: $(ODIR) all
 $(LIBNAME): $(OBJS)
 	$(SL_LINK) -o $(LIBNAME) $(OBJS) $(SL_FLAGS)
 #	cp $(LIBNAME) $(EPICS_EXTENSIONS)/lib/$(HOST_ARCH)
-	cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/solaris
+#	cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/solaris
 # Dependencies
-$(ODIR)/pv_factory.o: pv_factory.cc pv_factory.h
-
-$(ODIR)/epics_pv_factory.o: epics_pv_factory.cc epics_pv_factory.h hashtable.h
-
-$(ODIR)/calc_pv_factory.o: calc_pv_factory.cc calc_pv_factory.h hashtable.h
-
 $(ODIR)/textupdate.o: textupdate.cc
 
 $(ODIR)/SciPlot.o: SciPlot.c SciPlot.h
