--- a/pvFactory/makefile
+++ b/pvFactory/makefile
@@ -10,6 +10,7 @@ OBJS   += $(ODIR)/textupdate.o
 OBJS   += $(ODIR)/SciPlot.o
 OBJS   += $(ODIR)/strip_data.o
 OBJS   += $(ODIR)/strip.o
+OBJS   += $(ODIR)/regTextupdate.o
 OBJS   += $(ODIR)/pv_register.o
 
 all: 	$(LIBNAME)
@@ -20,6 +21,7 @@ $(LIBNAME): $(OBJS)
 	$(SL_LINK) -o $(LIBNAME) $(OBJS) $(SL_FLAGS)
 #	cp $(LIBNAME) $(EPICS_EXTENSIONS)/lib/$(HOST_ARCH)
 #	cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/solaris
+
 # Dependencies
 $(ODIR)/textupdate.o: textupdate.cc
 
@@ -28,6 +30,8 @@ $(ODIR)/SciPlot.o: SciPlot.c SciPlot.h
 $(ODIR)/strip_data.o: strip_data.cc strip_data.h
 
 $(ODIR)/strip.o: strip.cc strip.h strip_data.h
+
+$(ODIR)/regTextupdate.o: regTextupdate.cc
 
 $(ODIR)/pv_register.o: pv_register.cc
 
