Added support for the motifSlider widget

--- a/baselib/Makefile.Host
+++ b/baselib/Makefile.Host
@@ -59,6 +59,7 @@ LIBSRCS += slider.cc
 LIBSRCS += shell_cmd.cc
 LIBSRCS += updownButton.cc
 LIBSRCS += reg_libEdmBase.cc
+LIBSRCS += motifSlider.cc
 
 LIBSRCS += expRect.cc
 
