--- a/pvFactory/makefile
+++ b/pvFactory/makefile
@@ -20,7 +20,7 @@ buildInstall: $(ODIR) all
 
 $(LIBNAME): $(OBJS)
 	$(SL_LINK) -o $(LIBNAME) $(OBJS) $(SL_FLAGS)
-#	cp $(LIBNAME) $(EPICS_EXTENSIONS)/lib/$(HOST_ARCH)
+	cp $(LIBNAME) $(EPICS_EXTENSIONS)/lib/$(HOST_ARCH)
 #	cp $(LIBNAME) /home/csg/devel/ADE/R3.13.3/support/extensions/1-1/lib/solaris
 
 # Dependencies
