--- a/pvFactory/Makefile.Host
+++ b/pvFactory/Makefile.Host
@@ -4,6 +4,11 @@ include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
 
+ifeq ($(HOST_ARCH),solaris)
+G++_STRICT=$(G++) -pedantic -Wtraditional
+endif
+
+
 LIBRARY = PV
 
 USR_INCLUDES += -I../../lib -I../../util -I../../pvlib
