--- a/pvFactory/Makefile.Host
+++ b/pvFactory/Makefile.Host
@@ -4,14 +4,11 @@ include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
 
-ifeq ($(HOST_ARCH),solaris)
-G++_STRICT=$(G++) -pedantic -Wtraditional
-endif
-
-
 LIBRARY = PV
 
+
 USR_INCLUDES += -I../../lib -I../../util -I../../pvlib
+
 
 LIBSRCS   += textupdate.cc
 LIBSRCS   += SciPlot.cc
@@ -20,6 +17,16 @@ LIBSRCS   += strip.cc
 LIBSRCS   += regTextupdate.cc
 LIBSRCS   += byte.cc
 LIBSRCS   += pv_register.cc
+
+
+ifeq ($(HOST_ARCH),solaris)
+G++_STRICT=$(G++) -pedantic -Wtraditional
+endif
+
+#CFLAGS=-g -Wall -O0 -DMOTIF 
+CFLAGS+=-D__linux__=1 -D__epics__=1
+CXXFLAGS=$(CFLAGS)
+
 
 include $(TOP)/config/RULES.Host
 
