--- a/edmMain/Makefile.Host
+++ b/edmMain/Makefile.Host
@@ -2,29 +2,22 @@ TOP = ../../../..
 include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 
-ifeq ($(HOST_ARCH),Linux)
+USR_CXXFLAGS_Linux += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
 
-  USR_CXXFLAGS += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_LIBS_Linux = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xmu Xt Xp Xtst X11 pthread dl
 
-  USR_LIBS_DEFAULT = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xmu Xt Xp Xtst X11 pthread dl
+USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 
-endif
+USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
 
-ifeq ($(HOST_ARCH),solaris)
-
-  USR_CXXFLAGS += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-
-  USR_LIBS_DEFAULT = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
-
-endif
-
-USR_LDFLAGS += -L../../../../lib/$(HOST_ARCH) -L../../../../bin/$(HOST_ARCH)
+USR_LDFLAGS += -L$(INSTALL_LIB)
 
 PROD = edm
 
 PROD_LIBS += ca Com
 
 USR_INCLUDES = -I../ -I../../util -I../../pvlib -I../../lib
+USR_INCLUDES += -I$(MOTIF_INC) -I$(X11_INC)
 
 Xm_DIR = $(MOTIF_LIB)
 Xt_DIR = $(X11_LIB)
