--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -3,29 +3,20 @@ include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
 
-ifeq ($(HOST_ARCH),Linux)
+USR_CXXFLAGS_Linux += -Wall -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_LIBS_Linux = Xm Xt Xp Xtst X11 pthread dl
 
-  USR_CXXFLAGS += -Wall -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_LIBS_solaris = Xm Xt Xmu X11 Xext pthread dl rt
 
-  USR_LIBS_DEFAULT = Xm Xt Xp Xtst X11 pthread dl
-
-endif
-
-ifeq ($(HOST_ARCH),solaris)
-
-  USR_CXXFLAGS += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-
-  USR_LIBS_DEFAULT = Xm Xt Xmu X11 Xext pthread dl rt
-
-endif
-
-USR_LDFLAGS += -shared -L../../../../lib/$(HOST_ARCH)
+USR_LDFLAGS += -L$(INSTALL_LIB)
 
 LIBRARY = cfcaa62e-8199-11d3-a77f-00104b8742df
 
 PROD_LIBS += ca Com
 
 USR_INCLUDES = -I../ -I../../util -I../../pvlib
+USR_INCLUDES += -I$(MOTIF_INC) -I$(X11_INC)
 
 Xm_DIR = $(MOTIF_LIB)
 Xt_DIR = $(X11_LIB)
