--- a/pvlib/Makefile.Host
+++ b/pvlib/Makefile.Host
@@ -3,23 +3,13 @@ include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
 
-ifeq ($(HOST_ARCH),Linux)
+USR_CXXFLAGS_Linux += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_LIBS_Linux = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
 
-  USR_CXXFLAGS += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
 
-  USR_LIBS_DEFAULT = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
-
-endif
-
-ifeq ($(HOST_ARCH),solaris)
-
-  USR_CXXFLAGS += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
-
-  USR_LIBS_DEFAULT = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
-
-endif
-
-USR_LDFLAGS += -shared -L../../../../lib/$(HOST_ARCH) -L../../../../bin/$(HOST_ARCH)
+USR_LDFLAGS += -L$(INSTALL_LIB)
 
 LIBRARY = Epics
 
