--- a/pvFactory/Makefile.Host
+++ b/pvFactory/Makefile.Host
@@ -16,5 +16,14 @@ LIBSRCS   += regTextupdate.cc
 LIBSRCS   += byte.cc
 LIBSRCS   += pv_register.cc
 
+
+ifeq ($(HOST_ARCH),solaris)
+G++_STRICT=$(G++) -pedantic -Wtraditional
+endif
+
+#CFLAGS=-g -Wall -O0 -DMOTIF 
+CFLAGS+=-D__linux__=1 -D__epics__=1
+CXXFLAGS=$(CFLAGS)
+
 include $(TOP)/config/RULES.Host
 
