GCC 3.1 seems to have a problem with "offsetof" when used with classes. DLList (dl_list.h) uses offsetof, now the users of DLList like ProcessVariable employ a simple struct PVCallbackInfo instead of the previous class ProcessVariable::CallbackInfo. Also: John introduce the "initial callback" idea which could be disabled but never was -> removed all the enable/disable stuff, it's now the default.

--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -2,6 +2,7 @@ TOP = ../../../..
 include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
+HOST_OPT=NO
 
 USR_CXXFLAGS_Linux += -Wall -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
 USR_LIBS_Linux = Xm Xt Xp Xtst X11 pthread dl
