--- a/edmMain/Makefile.Host
+++ b/edmMain/Makefile.Host
@@ -4,6 +4,9 @@ STATIC_BUILD=NO
 
 USR_CXXFLAGS_Linux += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
 
+# Add Debugging
+USR_CXXFLAGS_Linux += -g -O0
+
 USR_LIBS_Linux = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xmu Xt Xp Xtst X11 pthread dl
 
 USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
@@ -11,6 +14,9 @@ USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
 
 USR_LDFLAGS += -L$(INSTALL_LIB)
+
+# Add Debugging
+USR_LDFLAGS += -g
 
 PROD = edm
 
