--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -5,13 +5,17 @@ SHARED_LIBRARIES=YES
 HOST_OPT=NO
 
 USR_CXXFLAGS_Linux += -Wall -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+# Add debugging
+USR_CXXFLAGS_Linux += -g -O0
+
 USR_LIBS_Linux = Xm Xt Xp Xtst X11 pthread dl
 
 USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 USR_LIBS_solaris = Xm Xt Xmu X11 Xext pthread dl rt
 
 USR_LDFLAGS += -L$(INSTALL_LIB)
-
+# Add Debugging
+USR_LDFLAGS += -g
 LIBRARY = cfcaa62e-8199-11d3-a77f-00104b8742df
 
 PROD_LIBS += ca Com
