--- a/pvlib/Makefile.Host
+++ b/pvlib/Makefile.Host
@@ -3,12 +3,19 @@ include $(TOP)/config/CONFIG_EXTENSIONS
 STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
 
+
+# Add Debugging
+USR_CXXFLAGS_Linux += -g -O0
+
 USR_CXXFLAGS_Linux += -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
 USR_LIBS_Linux = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
 
 USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df pthread dl
 
+
+# Add Debugging
+USR_LDFLAGS += -g
 USR_LDFLAGS += -L$(INSTALL_LIB)
 
 LIBRARY = Epics
