--- a/util/makefile.solaris
+++ b/util/makefile.solaris
@@ -11,11 +11,13 @@ OBJS = sys_pkg.o os_pkg.o msg_pkg.o thread_pkg.o \
  avl.o crc.o ipncl_pkg.o ipnsv_pkg.o server_iprpc_pkg.o \
  ipnis_pkg.o
 
-INCLUDES = os.h os_objs.h sys_types.h os_priv.h ipncl.h ipncl_priv.h \
- ipnsv.h ipnsv_priv.h ipport.h ipport_priv.h msg.h msg_priv.h \
- ipncl.msh ipnsv.msh msg.msh ipnis.msh os.msh unix.msh thread.h thread_priv.h \
- client_iprpc.h iprpc_priv.h server_iprpc_priv.h client_iprpc_priv.h \
- server_iprpc.h iprpc.h ipnis.h ipnis_priv.h avl.h avl_priv.h crc.h
+INCLUDES = ../os.h ../os_objs.h ../sys_types.h ../os_priv.h ../ipncl.h \
+ ../ipncl_priv.h ../ipnsv.h ../ipnsv_priv.h ../ipport.h ../ipport_priv.h \
+ ../msg.h ../msg_priv.h ../ipncl.msh ../ipnsv.msh ../msg.msh ../ipnis.msh \
+ ../os.msh ../unix.msh ../thread.h ../thread_priv.h ../client_iprpc.h \
+ ../iprpc_priv.h ../server_iprpc_priv.h ../client_iprpc_priv.h \
+ ../server_iprpc.h ../iprpc.h ../ipnis.h ../ipnis_priv.h ../avl.h \
+ ../avl_priv.h ../crc.h
 
 MESSAGES = net/solaris/ipncl.mes net/solaris/ipnsv.mes msg/msg.mes \
  net/solaris/ipnis.mes sys/solaris/os.mes sys/solaris/unix.mes \
@@ -72,76 +74,76 @@ avl.o : ../avl/avl.c
 crc.o : ../crc/crc.c
 	$(compile) -c ../crc/crc.c -o $@
 
-os.h : ../sys/solaris/os.h
+../os.h : ../sys/solaris/os.h
 	cp ../sys/solaris/os.h .
 
-os_objs.h : ../sys/solaris/os_objs.h
+../os_objs.h : ../sys/solaris/os_objs.h
 	cp ../sys/solaris/os_objs.h .
 
-sys_types.h : ../sys/solaris/sys_types.h
+../sys_types.h : ../sys/solaris/sys_types.h
 	cp ../sys/solaris/sys_types.h .
 
-os_priv.h : ../sys/solaris/os_priv.h
+../os_priv.h : ../sys/solaris/os_priv.h
 	cp ../sys/solaris/os_priv.h .
 
-ipncl.h : ../net/solaris/ipncl.h
+../ipncl.h : ../net/solaris/ipncl.h
 	cp ../net/solaris/ipncl.h .
 
-ipncl_priv.h : ../net/solaris/ipncl_priv.h
+../ipncl_priv.h : ../net/solaris/ipncl_priv.h
 	cp ../net/solaris/ipncl_priv.h .
 
-ipnsv.h : ../net/solaris/ipnsv.h
+../ipnsv.h : ../net/solaris/ipnsv.h
 	cp ../net/solaris/ipnsv.h .
 
-ipnsv_priv.h : ../net/solaris/ipnsv_priv.h
+../ipnsv_priv.h : ../net/solaris/ipnsv_priv.h
 	cp ../net/solaris/ipnsv_priv.h .
 
-ipport.h : ../net/solaris/ipport.h
+../ipport.h : ../net/solaris/ipport.h
 	cp ../net/solaris/ipport.h .
 
-ipport_priv.h : ../net/solaris/ipport_priv.h
+../ipport_priv.h : ../net/solaris/ipport_priv.h
 	cp ../net/solaris/ipport_priv.h .
 
-msg.h : ../msg/msg.h
+../msg.h : ../msg/msg.h
 	cp ../msg/msg.h .
 
-msg_priv.h : ../msg/msg_priv.h
+../msg_priv.h : ../msg/msg_priv.h
 	cp ../msg/msg_priv.h .
 
-thread.h : ../thread/solaris/thread.h
+../thread.h : ../thread/solaris/thread.h
 	cp ../thread/solaris/thread.h .
 
-thread_priv.h : ../thread/solaris/thread_priv.h
+../thread_priv.h : ../thread/solaris/thread_priv.h
 	cp ../thread/solaris/thread_priv.h .
 
-client_iprpc.h : ../iprpc/osf/client_iprpc.h
+../client_iprpc.h : ../iprpc/osf/client_iprpc.h
 	cp ../iprpc/osf/client_iprpc.h .
 
-iprpc.h : ../iprpc/osf/iprpc.h
+../iprpc.h : ../iprpc/osf/iprpc.h
 	cp ../iprpc/osf/iprpc.h .
 
-iprpc_priv.h : ../iprpc/osf/iprpc_priv.h
+../iprpc_priv.h : ../iprpc/osf/iprpc_priv.h
 	cp ../iprpc/osf/iprpc_priv.h .
 
-server_iprpc_priv.h : ../iprpc/osf/server_iprpc_priv.h
+../server_iprpc_priv.h : ../iprpc/osf/server_iprpc_priv.h
 	cp ../iprpc/osf/server_iprpc_priv.h .
 
-client_iprpc_priv.h : ../iprpc/osf/client_iprpc_priv.h
+../client_iprpc_priv.h : ../iprpc/osf/client_iprpc_priv.h
 	cp ../iprpc/osf/client_iprpc_priv.h .
 
-server_iprpc.h : ../iprpc/osf/server_iprpc.h
+../server_iprpc.h : ../iprpc/osf/server_iprpc.h
 	cp ../iprpc/osf/server_iprpc.h .
 
-ipnis.h : ../net/solaris/ipnis.h
+../ipnis.h : ../net/solaris/ipnis.h
 	cp ../net/solaris/ipnis.h .
 
-ipnis_priv.h : ../net/solaris/ipnis_priv.h
+../ipnis_priv.h : ../net/solaris/ipnis_priv.h
 	cp ../net/solaris/ipnis_priv.h .
 
-avl.h : ../avl/avl.h
+../avl.h : ../avl/avl.h
 	cp ../avl/avl.h .
 
-avl_priv.h : ../avl/avl_priv.h
+../avl_priv.h : ../avl/avl_priv.h
 	cp ../avl/avl_priv.h .
 
 depend :
