--- a/baselib/Makefile.Host
+++ b/baselib/Makefile.Host
@@ -67,7 +67,7 @@ LIBSRCS += reg_libEdmBase.cc
 LIBSRCS += motifSlider.cc
 LIBSRCS += radio_button.cc
 LIBSRCS += xygraph.cc
-LIBSRCS += expRect.cc
+LIBSRCS += pip.cc
 
 include $(TOP)/config/RULES.Host
 
