remove rules.cc add tag_pkg.cc

--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -69,7 +69,6 @@ LIBSRCS += keypad.cc
 LIBSRCS += calpad.cc
 LIBSRCS += fileSelect.cc
 LIBSRCS += undo.cc
-LIBSRCS += rules.cc
 LIBSRCS += color_list.cc
 LIBSRCS += msg_dialog.cc
 LIBSRCS += loc_pv_factory.cc
@@ -77,6 +76,7 @@ LIBSRCS += calc_pv_factory.cc
 LIBSRCS += epics_pv_factory.cc
 LIBSRCS += pv_factory.cc
 LIBSRCS += edmPrint.cc
+LIBSRCS += tag_pkg.cc
 
 include $(TOP)/config/RULES.Host
 
