--- a/baselib/Makefile.Host
+++ b/baselib/Makefile.Host
@@ -69,6 +69,7 @@ LIBSRCS += radio_button.cc
 LIBSRCS += xygraph.cc
 LIBSRCS += pip.cc
 LIBSRCS += pv_inspector.cc
+LIBSRCS += table.cc
 
 include $(TOP)/config/RULES.Host
 
