Changes for HPUX

--- a/baselib/Makefile.Host
+++ b/baselib/Makefile.Host
@@ -15,10 +15,13 @@ USR_LIBS_Linux = cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xp Xtst X11 pthread 
   USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
   USR_LIBS_solaris = cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
 
+  USR_CXXFLAGS_hpux11_11_mt += +W652 -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
+  USR_LIBS_hpux11_11_mt = cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xp Xtst X11 pthread 
+
 USR_LDFLAGS += -L$(INSTALL_LIB) -L$(INSTALL_BIN)
 
 # Add debugging
-USR_LDFLAGS += -g
+#USR_LDFLAGS += -g
 
 
 LIBRARY = EdmBase
