--- a/pnglib/Makefile.Host
+++ b/pnglib/Makefile.Host
@@ -16,8 +16,13 @@ USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 
 USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt png
 
+USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
+
+USR_LIBS_hpux11_11_mt = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df Xm Xt X11 Xext pthread png
+
 # Add Debugging
-USR_LDFLAGS += -g
+#USR_LDFLAGS += -g
+
 USR_LDFLAGS += -L$(INSTALL_LIB) -L$(IMAGELIB)
 
 LIBRARY = 57d79238-2924-420b-ba67-dfbecdf03fcd
