--- a/edmMain/Makefile.Host
+++ b/edmMain/Makefile.Host
@@ -13,10 +13,14 @@ USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 
 USR_LIBS_solaris = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread dl rt
 
+USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
+
+USR_LIBS_hpux11_11_mt = EdmBase cfcaa62e-8199-11d3-a77f-00104b8742df 114135a4-6f6c-11d3-95bc-00104b8742df Xm Xt Xmu X11 Xext pthread 
+
 USR_LDFLAGS += -L$(INSTALL_LIB)
 
 # Add Debugging
-USR_LDFLAGS += -g
+#USR_LDFLAGS += -g
 
 PROD = edm
 
