--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -13,9 +13,14 @@ USR_LIBS_Linux = Xm Xt Xp Xtst X11 pthread dl
 USR_CXXFLAGS_solaris += -D__solaris__ -DSINGLE_THREADED=1 -D__epics__=1
 USR_LIBS_solaris = Xm Xt Xmu X11 Xext pthread dl rt
 
+USR_CXXFLAGS_hpux11_11_mt += -DHP_UX=1111 -DSINGLE_THREADED=1 -D__epics__=1
+USR_LIBS_hpux11_11_mt = Xm Xt X11 Xext pthread 
+
 USR_LDFLAGS += -L$(INSTALL_LIB)
+
 # Add Debugging
-USR_LDFLAGS += -g
+#USR_LDFLAGS += -g
+
 LIBRARY = cfcaa62e-8199-11d3-a77f-00104b8742df
 
 PROD_LIBS += ca Com
