Delete *.h on clean target

--- a/util/Makefile.Host
+++ b/util/Makefile.Host
@@ -1,6 +1,7 @@
 .phony : inc
 .phony : buildInstall
 .phony : install
+.phony : clean
 
 inc :;
 
@@ -11,3 +12,5 @@ buildInstall : ;
 	@$(MAKE) -f ../makefile.$(HOST_ARCH)
 	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.a ../../../../lib/$(HOST_ARCH)
 	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.so ../../../../lib/$(HOST_ARCH)
+
+clean : rm *.h
