--- a/util/makefile.solaris
+++ b/util/makefile.solaris
@@ -2,14 +2,14 @@ CFLAGS = -Wall -fPIC -I.. -g -O0 -DUNIX
 
 compile = gcc $(CFLAGS)
 
-SRCS = ../net/solaris/ipncl_pkg.c ../net/solaris/ipnsv_pkg.c ../sys/solaris/sys_pkg.c \
- ../sys/solaris/os_pkg.c ../msg/msg_pkg.c ../thread/solaris/thread_pkg.c \
+SRCS = ../net/solaris/ipncl_pkg.c ../net/solaris/ipnsv_pkg.c \
+ ../sys/solaris/sys_pkg.c ../sys/solaris/os_pkg.c \
+ ../msg/msg_pkg.c ../thread/solaris/thread_pkg.c \
  ../iprpc/osf/server_iprpc_pkg.c ../iprpc/osf/client_iprpc_pkg.c \
  ../net/solaris/ipnis_pkg.c ../avl/avl.c ../crc/crc.c
 
-OBJS = sys_pkg.o os_pkg.o msg_pkg.o thread_pkg.o \
- avl.o crc.o ipncl_pkg.o ipnsv_pkg.o server_iprpc_pkg.o \
- ipnis_pkg.o
+OBJS = ipncl_pkg.o ipnsv_pkg.o sys_pkg.o os_pkg.o msg_pkg.o thread_pkg.o\
+ server_iprpc_pkg.o client_iprpc_pkg.o ipnis_pkg.o avl.o crc.o
 
 INCLUDES = ../os.h ../os_objs.h ../sys_types.h ../os_priv.h ../ipncl.h \
  ../ipncl_priv.h ../ipnsv.h ../ipnsv_priv.h ../ipport.h ../ipport_priv.h \
@@ -19,27 +19,16 @@ INCLUDES = ../os.h ../os_objs.h ../sys_types.h ../os_priv.h ../ipncl.h \
  ../server_iprpc.h ../iprpc.h ../ipnis.h ../ipnis_priv.h ../avl.h \
  ../avl_priv.h ../crc.h
 
-MESSAGES = net/solaris/ipncl.mes net/solaris/ipnsv.mes msg/msg.mes \
- net/solaris/ipnis.mes sys/solaris/os.mes sys/solaris/unix.mes \
- thread/solaris/thread.mes iprpc/osf/iprpc.mes net/solaris/ipnis.mes avl/avl.mes
-
-util : util.fac lib114135a4-6f6c-11d3-95bc-00104b8742df.so \
+util : $(INCLUDES) \
+	lib114135a4-6f6c-11d3-95bc-00104b8742df.so \
 	lib114135a4-6f6c-11d3-95bc-00104b8742df.a
 	@echo "done"
 
 lib114135a4-6f6c-11d3-95bc-00104b8742df.so : $(OBJS)
 	gcc -shared -Wl -o lib114135a4-6f6c-11d3-95bc-00104b8742df.so $(OBJS)
-	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.so ../../../../lib/$(HOST_ARCH)
 
-lib114135a4-6f6c-11d3-95bc-00104b8742df.a : $(OBJS)
-	/usr/ccs/bin/ar -r lib114135a4-6f6c-11d3-95bc-00104b8742df.a $(OBJS)
-	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.a ../../../../lib/$(HOST_ARCH)
-
-#util.fac : $(MESSAGES)
-#	bldmsg util_mes.list util
-
-util.fac : ;
-	cp ../util.fac .
+lib114135a4-6f6c-11d3-95bc-00104b8742df.a : $(OBJS) 
+	ar -r lib114135a4-6f6c-11d3-95bc-00104b8742df.a $(OBJS)
 
 ipncl_pkg.o : ../net/solaris/ipncl_pkg.c
 	$(compile) -c ../net/solaris/ipncl_pkg.c -o $@
@@ -75,76 +64,79 @@ crc.o : ../crc/crc.c
 	$(compile) -c ../crc/crc.c -o $@
 
 ../os.h : ../sys/solaris/os.h
-	cp ../sys/solaris/os.h .
+	cp ../sys/solaris/os.h ../
 
 ../os_objs.h : ../sys/solaris/os_objs.h
-	cp ../sys/solaris/os_objs.h .
+	cp ../sys/solaris/os_objs.h ../
 
 ../sys_types.h : ../sys/solaris/sys_types.h
-	cp ../sys/solaris/sys_types.h .
+	cp ../sys/solaris/sys_types.h ../
 
 ../os_priv.h : ../sys/solaris/os_priv.h
-	cp ../sys/solaris/os_priv.h .
+	cp ../sys/solaris/os_priv.h ../
 
 ../ipncl.h : ../net/solaris/ipncl.h
-	cp ../net/solaris/ipncl.h .
+	cp ../net/solaris/ipncl.h ../
 
 ../ipncl_priv.h : ../net/solaris/ipncl_priv.h
-	cp ../net/solaris/ipncl_priv.h .
+	cp ../net/solaris/ipncl_priv.h ../
 
 ../ipnsv.h : ../net/solaris/ipnsv.h
-	cp ../net/solaris/ipnsv.h .
+	cp ../net/solaris/ipnsv.h ../
 
 ../ipnsv_priv.h : ../net/solaris/ipnsv_priv.h
-	cp ../net/solaris/ipnsv_priv.h .
+	cp ../net/solaris/ipnsv_priv.h ../
 
 ../ipport.h : ../net/solaris/ipport.h
-	cp ../net/solaris/ipport.h .
+	cp ../net/solaris/ipport.h ../
 
 ../ipport_priv.h : ../net/solaris/ipport_priv.h
-	cp ../net/solaris/ipport_priv.h .
+	cp ../net/solaris/ipport_priv.h ../
 
 ../msg.h : ../msg/msg.h
-	cp ../msg/msg.h .
+	cp ../msg/msg.h ../
 
 ../msg_priv.h : ../msg/msg_priv.h
-	cp ../msg/msg_priv.h .
+	cp ../msg/msg_priv.h ../
 
 ../thread.h : ../thread/solaris/thread.h
-	cp ../thread/solaris/thread.h .
+	cp ../thread/solaris/thread.h ../
 
 ../thread_priv.h : ../thread/solaris/thread_priv.h
-	cp ../thread/solaris/thread_priv.h .
+	cp ../thread/solaris/thread_priv.h ../
 
 ../client_iprpc.h : ../iprpc/osf/client_iprpc.h
-	cp ../iprpc/osf/client_iprpc.h .
+	cp ../iprpc/osf/client_iprpc.h ../
 
 ../iprpc.h : ../iprpc/osf/iprpc.h
-	cp ../iprpc/osf/iprpc.h .
+	cp ../iprpc/osf/iprpc.h ../
 
 ../iprpc_priv.h : ../iprpc/osf/iprpc_priv.h
-	cp ../iprpc/osf/iprpc_priv.h .
+	cp ../iprpc/osf/iprpc_priv.h ../
 
 ../server_iprpc_priv.h : ../iprpc/osf/server_iprpc_priv.h
-	cp ../iprpc/osf/server_iprpc_priv.h .
+	cp ../iprpc/osf/server_iprpc_priv.h ../
 
 ../client_iprpc_priv.h : ../iprpc/osf/client_iprpc_priv.h
-	cp ../iprpc/osf/client_iprpc_priv.h .
+	cp ../iprpc/osf/client_iprpc_priv.h ../
 
 ../server_iprpc.h : ../iprpc/osf/server_iprpc.h
-	cp ../iprpc/osf/server_iprpc.h .
+	cp ../iprpc/osf/server_iprpc.h ../
 
 ../ipnis.h : ../net/solaris/ipnis.h
-	cp ../net/solaris/ipnis.h .
+	cp ../net/solaris/ipnis.h ../
 
 ../ipnis_priv.h : ../net/solaris/ipnis_priv.h
-	cp ../net/solaris/ipnis_priv.h .
+	cp ../net/solaris/ipnis_priv.h ../
 
 ../avl.h : ../avl/avl.h
-	cp ../avl/avl.h .
+	cp ../avl/avl.h ../
 
 ../avl_priv.h : ../avl/avl_priv.h
-	cp ../avl/avl_priv.h .
+	cp ../avl/avl_priv.h ../
+
+../crc.h : ../crc/crc.h
+	cp ../crc/crc.h ../
 
 depend :
 	makedepend -- $(CFLAGS) -- $(SRCS)
