--- a/lib/Makefile.Host
+++ b/lib/Makefile.Host
@@ -4,7 +4,7 @@ STATIC_BUILD=NO
 SHARED_LIBRARIES=YES
 HOST_OPT=NO
 
-USR_CXXFLAGS_Linux += -Wall -D__linux__ -DSINGLE_THREADED=1 -D__epics__=1
+USR_CXXFLAGS_Linux += -Wall -D__linux__ -D_BSD_SOURCE -DSINGLE_THREADED=1 -D__epics__=1
 # Add debugging
 USR_CXXFLAGS_Linux += -g -O0
 
