fix Makefile.Host to create destination lib and not depend on other extensions to have already done this

--- a/util/Makefile.Host
+++ b/util/Makefile.Host
@@ -11,5 +11,6 @@ install : buildInstall
 buildInstall : ;
 	-rm ../*.h
 	@$(MAKE) -f ../makefile.$(HOST_ARCH)
+	mkdir -p ../../../../lib/$(HOST_ARCH)
 	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.a ../../../../lib/$(HOST_ARCH)
 	cp lib114135a4-6f6c-11d3-95bc-00104b8742df.so ../../../../lib/$(HOST_ARCH)
